kubernetes/apps/ollama/base/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-external-ollama
  namespace: ollama
spec:
  parentRefs:
  - name: external-gateway
    namespace: kube-system
  hostnames:
    - "ollama.ninebasetwo.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: open-webui-service
      port: 8080
    timeouts:
      backendRequest: 10m
