kubernetes/apps/ollama/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-external-ollama
  namespace: ollama
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: ollama.ninebasetwo.net
spec:
  ingressClassName: nginx 
  rules:
  - host: ollama.ninebasetwo.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: open-webui-service
            port:
              number: 8080
  tls:
  - hosts:
    - ollama.ninebasetwo.net
    secretName: ollama-tls
